<resources>
    <string name="app_name">TeenToon</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="genre">Genre</string>
    <string name="email">Email</string>
    <string name="title_home">Home</string>
    <string name="title_community">Community</string>
    <string name="title_reflections">Reflection</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>